--- a/02_algorithm_examples_eigenfaces.ipynb
+++ b/02_algorithm_examples_eigenfaces.ipynb
@@ -548,7 +548,7 @@
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "clf = Pipeline([('pca', decomposition.PCA(n_components=150, whiten=True)),\n",
-    "                ('svm', svm.LinearSVC(C=1.0))])\n",
+    "                ('svm', svm.LinearSVC(C=1.0, max_iter=2000))])\n",
     "\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
