--- a/02_algorithm_examples_pca.ipynb
+++ b/02_algorithm_examples_pca.ipynb
@@ -502,22 +502,22 @@
     "Note that scikit-learn contains many other unsupervised dimensionality reduction routines: some you might wish to try are\n",
     "Other dimensionality reduction techniques which are useful to know about:\n",
     "\n",
-    "- [sklearn.decomposition.PCA](http://scikit-learn.org/0.13/modules/generated/sklearn.decomposition.PCA.html): \n",
+    "- [sklearn.decomposition.PCA](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html: \n",
     "   Principal Component Analysis\n",
-    "- [sklearn.decomposition.RandomizedPCA](http://scikit-learn.org/0.13/modules/generated/sklearn.decomposition.RandomizedPCA.html):\n",
+    "- [sklearn.decomposition.RandomizedPCA](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.RandomizedPCA.html):\n",
     "   extremely fast approximate PCA implementation based on a randomized algorithm\n",
-    "- [sklearn.decomposition.SparsePCA](http://scikit-learn.org/0.13/modules/generated/sklearn.decomposition.SparsePCA.html):\n",
+    "- [sklearn.decomposition.SparsePCA](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.SparsePCA.html):\n",
     "   PCA variant including L1 penalty for sparsity\n",
-    "- [sklearn.decomposition.FastICA](http://scikit-learn.org/0.13/modules/generated/sklearn.decomposition.FastICA.html):\n",
+    "- [sklearn.decomposition.FastICA](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.FastICA.html):\n",
     "   Independent Component Analysis\n",
-    "- [sklearn.decomposition.NMF](http://scikit-learn.org/0.13/modules/generated/sklearn.decomposition.NMF.html):\n",
+    "- [sklearn.decomposition.NMF](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.NMF.html):\n",
     "   non-negative matrix factorization\n",
-    "- [sklearn.manifold.LocallyLinearEmbedding](http://scikit-learn.org/0.13/modules/generated/sklearn.manifold.LocallyLinearEmbedding.html):\n",
+    "- [sklearn.manifold.LocallyLinearEmbedding](http://scikit-learn.org/stable/modules/generated/sklearn.manifold.LocallyLinearEmbedding.html):\n",
     "   nonlinear manifold learning technique based on local neighborhood geometry\n",
-    "- [sklearn.manifold.IsoMap](http://scikit-learn.org/0.13/modules/generated/sklearn.manifold.Isomap.html):\n",
+    "- [sklearn.manifold.IsoMap](http://scikit-learn.org/stable/modules/generated/sklearn.manifold.Isomap.html):\n",
     "   nonlinear manifold learning technique based on a sparse graph algorithm\n",
     "   \n",
-    "Each of these has its own strengths & weaknesses, and areas of application. You can read about them on the [scikit-learn website](http://sklearn.org)."
+    "Each of these has its own strengths & weaknesses, and areas of application. You can read about them on the [scikit-learn website](https://scikit-learn.org/stable/)."
    ]
   }
  ],
