--- a/02_algorithm_examples_pca.ipynb
+++ b/02_algorithm_examples_pca.ipynb
@@ -502,7 +502,7 @@
     "Note that scikit-learn contains many other unsupervised dimensionality reduction routines: some you might wish to try are\n",
     "Other dimensionality reduction techniques which are useful to know about:\n",
     "\n",
-    "- [sklearn.decomposition.PCA](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html: \n",
+    "- [sklearn.decomposition.PCA](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html): \n",
     "   Principal Component Analysis\n",
     "- [sklearn.decomposition.RandomizedPCA](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.RandomizedPCA.html):\n",
     "   extremely fast approximate PCA implementation based on a randomized algorithm\n",
