updating links to route towards latest stable

--- a/02_algorithm_examples_pca.ipynb
+++ b/02_algorithm_examples_pca.ipynb
@@ -504,12 +504,14 @@
     "\n",
     "- [sklearn.decomposition.PCA](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html): \n",
     "   Principal Component Analysis\n",
-    "- [sklearn.decomposition.RandomizedPCA](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.RandomizedPCA.html):\n",
-    "   extremely fast approximate PCA implementation based on a randomized algorithm\n",
+    "- [sklearn.decomposition.IncrementalPCA](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.IncrementalPCA.html):\n",
+    "   Incremental principal components analysis (IPCA)\n",
     "- [sklearn.decomposition.SparsePCA](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.SparsePCA.html):\n",
     "   PCA variant including L1 penalty for sparsity\n",
     "- [sklearn.decomposition.FastICA](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.FastICA.html):\n",
-    "   Independent Component Analysis\n",
+    "   a fast Independent Component Analysis\n",
+    "- [sklearn.decomposition.KernelPCA](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.KernelPCA.html): \n",
+    "   Kernel Principal Component Analysis\n",
     "- [sklearn.decomposition.NMF](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.NMF.html):\n",
     "   non-negative matrix factorization\n",
     "- [sklearn.manifold.LocallyLinearEmbedding](http://scikit-learn.org/stable/modules/generated/sklearn.manifold.LocallyLinearEmbedding.html):\n",
