--- a/02_algorithm_examples_eigenfaces.ipynb
+++ b/02_algorithm_examples_eigenfaces.ipynb
@@ -98,7 +98,7 @@
     "   gathering a sufficient amount of training data for the algorithm to work.\n",
     "   Fortunately, this piece is common enough that it has been done. One good\n",
     "   resource is\n",
-    "   `OpenCV <http://opencv.willowgarage.com/wiki/FaceRecognition>`__, the\n",
+    "   `OpenCV <https://opencv.org>`__, the\n",
     "   *Open Computer Vision Library*.\n",
     "\n",
     "We'll perform a Support Vector classification of the images. We'll do a\n",
