removed hardcoded paths for feature saving/loading

--- a/04_functional_connectivity_with_nilearn.ipynb
+++ b/04_functional_connectivity_with_nilearn.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "# Make sure you have the latest version of nilearn, which contains the dataset used for this workshop\n",
-    "pip install nilearn==0.6.0b0 "
+    "# pip install nilearn==0.6.0b0 "
    ]
   },
   {
@@ -478,8 +478,8 @@
    "source": [
     "# Let's save the data to disk\n",
     "import numpy as np\n",
-    "\n",
-    "np.savez_compressed('/Users/cdeback/Documents/MAIN2019_BASC064_subsamp_features',a = all_features)"
+    "import os \n",
+    "np.savez_compressed(os.path.join(os.curdir, 'MAIN2019_BASC064_subsamp_features'),a = all_features)"
    ]
   },
   {
@@ -496,7 +496,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "feat_file = '/Users/cdeback/Documents/MAIN2019_BASC064_subsamp_features.npz'\n",
+    "np.savez_compressed(os.path.join(os.curdir, 'MAIN2019_BASC064_subsamp_features'),a = all_features)\n",
+    "feat_file = os.path.join(os.curdir, 'MAIN2019_BASC064_subsamp_features.npz')\n",
     "X_features = np.load(feat_file)['a']"
    ]
   },
@@ -1145,7 +1146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
